# MLTree

./: .gitignore  CMakeLists.txt  MLTreeMaker_Dilia.py  README.md
cmt/: cleanup.csh  cleanup.sh  install.x86_64-slc6-gcc49-opt.history  requirements  setup.csh  setup.sh  version.cmt
genConf/MLTree/: MLTree.confdb  MLTreeConf.py  __init__.py
macros/: plot_images.py  plot_roc_arrays.py  save_roc_arrays.py  save_roc_arrays_2.py  save_roc_arrays_3.py  train_keras_convolutional.py  train_keras_simple.py  tree2nparray.py
python/: CellGeometryTreeMaker.py  MLTreeConfigFlags.py  MLTreeMakerCfg.py  MainCfg.py  datasets_e_pi_pt100.json  datasets_e_pi_pt1to100.json  datasets_gamma_pt10.json  datasets_jets.json  datasets_pi0_plus_minus_logE0p2to2000.json  datasets_pipm.json  launch_jobs.py  plot_images.py  plot_roc_arrays.py  runCA.py  runCellGeometryTreeMaker.py  runDiJets.py  run_EdmundTingConfig.py  save_roc_arrays.py  save_roc_arrays_2.py  save_roc_arrays_3.py  submit_grid.py  train_keras_convolutional.py  train_keras_simple.py  tree2nparray.py
share/: CaloGeoTreeMaker.py  MLTreeMaker.py  jetConfig.py
src/: CellGeometryTreeMaker.cxx  CellGeometryTreeMaker.h  MLTreeMaker.cxx  MLTreeMaker.h
src/components/: MLTree_entries.cxx  MLTree_load.cxx
x86_64-slc6-gcc49-opt/: CompilePython.in  MLTree.components  MLTree.in  MLTree.make  MLTreeCLIDDB.in  MLTreeCLIDDB.make  MLTreeComponentsList.in  MLTreeComponentsList.make  MLTreeConf.in  MLTreeConf.make  MLTreeConfDbMerge.in  MLTreeConfDbMerge.make  MLTreeMaker.d  MLTreeMergeComponentsList.in  MLTreeMergeComponentsList.make  MLTree_NICOS_Fix_debuginfo.in  MLTree_entries.d  MLTree_load.d  MLTree_optdebug_library.in  MLTree_optdebug_library.make  MLTree_python_init.in  MLTree_python_init.make  TestPackage.in  TestProject.in  all_post_constituents.in  check_install_joboptions.in  check_install_joboptions.make  check_install_python_modules.in  check_install_python_modules.make  checkout_pkg.in  checkreq.in  checkreq.make  compile.in  compile_pkg.in  constituents.make  cppcheck.in  dependencies.in  doxygen.in  find_packages.in  install_includes.in  (+25 more)
